== 0.6.2 2010-01-18

=== Bugfixes
* Update --help for --tags which was out of date. (Aslak Hellesøy)
* Explicitly use Prawn 0.6.3 for pdf formatter since 0.7.1 is broken (Aslak Hellesøy)
* PDF formatter renders tables incorrectly (#553 Andy Waite)
* Better colouring in HTML report (Rob Aldred)
* Detect output encoding properly on JRuby+Windows (Aslak Hellesøy)
* Added option to override output encoding on Windows with an CUCUMBER_OUTPUT_ENCODING env var (Aslak Hellesøy)
* PDF generation requires 'prawn-format' (#558 Aslak Hellesøy)

=== New features
* Show profiles in error scenario summary. (#550 Joseph Wilk)

=== Removed features
* element_at and table_at have been removed. Use tableish in cucumber-rails instead. (Aslak Hellesœy)

== 0.6.1 2010-01-03

=== Bugfixes
* Fixed broken console handling on Windows/JRuby that was introduced in 0.6.0. (Aslak Hellesøy)

== 0.6.0 2010-01-03

Bumping to 0.6.0 for this release since we're breaking backwards compatibility with tags.

=== Changed Features
* Tag boolean logic is inverted. What was ORed before is now ANDed and vice versa. (#504 Aslak Hellesøy)
  This makes it more practical in most cases to mix tags from profiles and the command line

  In previous versions the following command line:
  
    --tags @foo,~@bar --tags @zap (on the command line)
  
  or the following Hook:
  
    Before("@foo,~@bar", "@zap") (for Hooks)
  
  would be equivalent to the boolean expression:       (@foo && !@bar) || @zap
  Starting with this release it will be equivalent to: (@foo || !@bar) && @zap

=== Bugfixes
* Cucumber not loading the correct settings using autospec (#496, #523 Aslak Hellesøy, Andrzej Śliwa)
* Ruby 1.9.2 fails to load features/support/env.rb (#549 Aslak Hellesøy)
* All features (except 4) pass on 1.9.2 (but not on 1.9.1) (Aslak Hellesøy)
* Add missing require statement in rerun formatter which broke RubyMine (Noah Sussman)

== 0.5.3 2009-12-22
