@@ -1,3 +1,8 @@
+== In Git
+
+=== New features
+* Add diff! message to wire protocol to allow for immediate diff response to invokes (Matt Wynne)
+
 == 0.6.2 2010-01-18
 
 === Bugfixes
